--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ca">
 <head>
 	<meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
 	<title>OpenStreetMap Catalunya</title>
 	<meta content="Mapes de Catalunya amb OSM" name="description"/>
 	<link rel="stylesheet" href="api/jquery-ui-1.12.1.custom/jquery-ui.min.css" type="text/css"/>
